src/test/ui/parser/raw-str-unbalanced.stderr
error: expected one of `.`, `;`, `?`, or an operator, found `#`
  --> $DIR/raw-str-unbalanced.rs:5:9
   |
LL |       "## //~ ERROR expected one of `.`, `;`, `?`, or an operator, found `#`
   |         ^ expected one of `.`, `;`, `?`, or an operator here

error: aborting due to previous error

